2007-07-20  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        clip the drawn text correctly when needed.

        * platform/qt/FontQt.cpp:
        (WebCore::Font::drawText):

2007-07-20  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        Fix offsetForPosition and selectionRectForText methods.

        * platform/qt/FontQt.cpp:
        (WebCore::Font::offsetForPosition):
        (WebCore::cursorToX):
        (WebCore::Font::selectionRectForText):

2007-07-20  Lars Knoll  <lars@trolltech.com>

        Reviewed by Simon.

        fix BiDi text rendering.

        * platform/qt/FontQt.cpp:
        (WebCore::TextRunComponent::TextRunComponent):
        (WebCore::generateComponents):
        (WebCore::Font::drawText):

2007-07-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Maciej.

        Move FTPDirectoryTokenizer::m_templateDocumentData to be a function-scoped static
        to avoid creating a global initializer.  This fixes the build for x86_64.

        * loader/FTPDirectoryDocument.cpp:
        (WebCore::FTPDirectoryTokenizer::loadDocumentTemplate):

2007-07-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Fixed <rdar://problem/5347849> Cache eviction of live decoded data is 
        thrash-y
        
        The solution here is to evict live decoded data based on a strict LRU
        model. This should work well as a "scrolling window."

        With this patch, I see a substantial reduction in CPU while scrolling
        through a page with large images on a low memory system. Layout tests
        pass.

        * loader/Cache.h: Changed from a size-based vector of LRU lists to a
        single LRU list in order to implement strict LRU.
        
        * loader/CachedResource.h: Removed tracking of access count, since that
        was the old cache eviction model.

2007-07-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.
